add setings to .lfsconfig
Change-Id: If70f5e6c616d227c0fc4cd089f1ec98e69d2a43b

--- a/.lfsconfig
+++ b/.lfsconfig
@@ -2,3 +2,7 @@
 url = "https://srv630.mcil.comm.mot.com/artifactory/api/lfs/test_lfs_local"
 
 
+[remote "origin"]
+url = <URL>
+fetch = +refs/heads/*:refs/remotes/origin/*
+lfsurl = "https://srv630.mcil.comm.mot.com/artifactory/api/lfs/test_lfs_local"
