--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 test.zip filter=lfs diff=lfs merge=lfs -text
 test1.zip filter=lfs diff=lfs merge=lfs -text
+libX11.so.6.2.0 filter=lfs diff=lfs merge=lfs -text
